test_scripts/errors/not_keyword.shm
let d = 0
if not d {
    print("x")
}
